UI-Dev: Configuration and Jumbotron

--- a/lottery-react/src/index.css
+++ b/lottery-react/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.jumbo {
+  background-image:    url(./assets/blockchain.jpg);
+  background-size:     cover;  
+  background-repeat:   no-repeat;
+  background-position: center;
+}
